# ncbar

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md
include/: core.hpp  globals.hpp  renderer.hpp  rendererHelper.hpp  vulkanHelper.hpp  vulkanInclude.hpp  window.hpp  wlr-layer-shell-unstable-v1-wrapper.hpp
src/: core.cpp  main.cpp  renderer.cpp  window.cpp
